--- a/src/_locales/da/messages.json
+++ b/src/_locales/da/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Search & Link Preview",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Previews for link",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "Se forhåndsvisninger af links og udfører øjeblikkeligt søgninger på den samme side ved hjælp af denne previewer i stedet for at åbne nye faner",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Hvordan har vi det?"
+  "@testMarkup": {
+    "message": "<div> <p> hej verden </p> Dette er <strong> sprog </strong> på web </div>"
   },
-  "fdbkCareToShare": {
-    "message": "Glad for at du kunne lide det! Kan du hjælpe os med at dele ❤?"
+  "Search engine": {
+    "message": "Søgemaskine"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Hvordan kan vi forbedre os?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Søgemaskinen, der ville blive brugt til inline -søgningseksempler."
   },
-  "fdbkThanks": {
-    "message": "Tak for tilbagemeldingen!"
+  "Google Search": {
+    "message": "Google søgning"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Bedøm på webshop"
+  "Bing Search": {
+    "message": "Bing -søgning"
   },
-  "fdbkNoResponse": {
-    "message": "Ingen"
+  "Yahoo Search": {
+    "message": "Yahoo -søgning"
   },
-  "fdbkSumbit": {
-    "message": "Indsend"
+  "Baidu Search": {
+    "message": "Baidu -søgning"
   },
-  "reportAnIssue": {
-    "message": "Rapporter et problem",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Yandex -søgning"
   },
-  "showDemo": {
-    "message": "Vis demo",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Eksempel på bredde (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Med succes opdaterede indstillinger"
+  "The width of the preview panel relative to the page.": {
+    "message": "Bredden på preview -panelet i forhold til siden."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Preview højde (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Højden på preview -panelet i forhold til siden."
+  },
+  "Panel Position": {
+    "message": "Panelposition"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Siden af den side, hvor man kan vise forhåndsvisningen."
+  },
+  "Right side": {
+    "message": "Højre side"
+  },
+  "Left side": {
+    "message": "Venstre side"
+  },
+  "Close on Escape Key": {
+    "message": "Luk på Escape Key"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Brug ESC (Escape) -tasten til at lukke preview -panelet."
+  },
+  "Automatically Hide Previews": {
+    "message": "Skjul automatisk forhåndsvisning"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Skjuler preview -panelet, når du ruller væk eller interagerer med hovedsiden."
+  },
+  "Preview in Side Panel": {
+    "message": "Eksempel på sidepanel"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Viser udsigten i krom sidepanel i stedet for en flydende kasse."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Preview-on-Hover forsinkelse"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Når automatisk forhåndsvisning af hover er aktiveret, er dette forsinkelsen, før forhåndsvisningen vises."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Avanceret] Force Preview"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "For websteder, der ** virkelig ** ikke ønsker at blive forhåndsvisning (f.eks. Stackoverflow.com), tvinger dette en forhåndsvisning. Nerd Alert: Dette er en ramme-busting buster."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Avanceret] Deaktiver inkognito Google"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "Som standard er den version af den anvendte Google-søgning altid underskrevet af privatlivets fred og sikkerhedsmæssige årsager. Selvom dette kan resultere i altid at se login-promp."
+  },
+  "Disable Previews on this site": {
+    "message": "Deaktiver forhåndsvisninger på dette websted"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Detaljeroplysningerne om afkrydsningsfeltet her."
+  },
+  "Disabled on Websites": {
     "message": "Handicappet på websteder"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Udvidelse kører ikke på disse websteder. Indtast et sted pr. Linje."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Udvidelse kører ikke på disse websteder, du kan deaktivere et websted ved at tilføje til denne liste."
+  },
+  "Successfully updated settings": {
+    "message": "Med succes opdaterede indstillinger"
   }
 }
