--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Search & Link Preview",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Link Previews",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "See previews of links and instantly performs searches on the same page using this previewer instead of opening new tabs",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "How are we doing?"
+  "@testMarkup": {
+    "message": "<div><p>Hello world</p>This is the <strong>language</strong> of the web</div>"
   },
-  "fdbkCareToShare": {
-    "message": "Glad you like it! Can you help us share the ❤️?"
+  "Search engine": {
+    "message": "Search engine"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "How can we improve?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "The search engine that would be used for inline search previews."
   },
-  "fdbkThanks": {
-    "message": "Thanks for the feedback!"
+  "Google Search": {
+    "message": "Google Search"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Rate on Webstore"
+  "Bing Search": {
+    "message": "Bing Search"
   },
-  "fdbkNoResponse": {
-    "message": "No"
+  "Yahoo Search": {
+    "message": "Yahoo Search"
   },
-  "fdbkSumbit": {
-    "message": "Submit"
+  "Baidu Search": {
+    "message": "Baidu Search"
   },
-  "reportAnIssue": {
-    "message": "Report an issue",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Yandex Search"
   },
-  "showDemo": {
-    "message": "Show demo",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Preview Width (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Successfully updated settings"
+  "The width of the preview panel relative to the page.": {
+    "message": "The width of the preview panel relative to the page."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Preview Height (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "The height of the preview panel relative to the page."
+  },
+  "Panel Position": {
+    "message": "Panel Position"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "The side of the page in which to display the preview."
+  },
+  "Right side": {
+    "message": "Right side"
+  },
+  "Left side": {
+    "message": "Left side"
+  },
+  "Close on Escape Key": {
+    "message": "Close on Escape Key"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Use the ESC (escape) key to close the preview panel."
+  },
+  "Automatically Hide Previews": {
+    "message": "Automatically Hide Previews"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Hides the preview panel when you scroll away or interact with the main page."
+  },
+  "Preview in Side Panel": {
+    "message": "Preview in Side Panel"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Displays the view in Chrome Side Panel instead of a floating box."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Preview-on-Hover Delay"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "When automatic preview on hover is enabled, this is the delay before the preview is shown."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Advanced] Force Preview"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Advanced] Disable Incognito Google"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts."
+  },
+  "Disable Previews on this site": {
+    "message": "Disable Previews on this site"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "The detail information about the checkbox here."
+  },
+  "Disabled on Websites": {
     "message": "Disabled on Websites"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Extension will not run on these sites. Enter one site per line."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Extension will not run on these sites, you can disable a site by adding to this list."
+  },
+  "Successfully updated settings": {
+    "message": "Successfully updated settings"
   }
 }
