--- a/src/_locales/fi/messages.json
+++ b/src/_locales/fi/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Haku ja linkkien esikatselu",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Linkkien esikatselut",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "Katso linkkien esikatselut ja suorittaa heti hakuja samalla sivulla tällä esikatselulla uusien välilehtien avaamisen sijasta",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Kuinka me voimme?"
+  "@testMarkup": {
+    "message": "<div> <p> Hei maailma </p> Tämä on Webin <strong> kieli </strong>"
   },
-  "fdbkCareToShare": {
-    "message": "Iloinen, että pidät siitä! Voitko auttaa meitä jakamaan ❤️?"
+  "Search engine": {
+    "message": "Hakukone"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Kuinka voimme parantaa?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Hakukone, jota käytetään inline -haun esikatseluun."
   },
-  "fdbkThanks": {
-    "message": "Kiitos palautteesta!"
+  "Google Search": {
+    "message": "Google haku"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Arvostelu verkkokaupassa"
+  "Bing Search": {
+    "message": "Bing -haku"
   },
-  "fdbkNoResponse": {
-    "message": "Ei"
+  "Yahoo Search": {
+    "message": "Yahoo -haku"
   },
-  "fdbkSumbit": {
-    "message": "Lähetä"
+  "Baidu Search": {
+    "message": "Baidu -haku"
   },
-  "reportAnIssue": {
-    "message": "Ilmoita ongelma",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Yandex -haku"
   },
-  "showDemo": {
-    "message": "Näytä esittely",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Esikatselun leveys (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Päivitetyt asetukset onnistuneesti"
+  "The width of the preview panel relative to the page.": {
+    "message": "Esikatselupaneelin leveys suhteessa sivulle."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Esikatselukorkeus (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Esikatselupaneelin korkeus suhteessa sivulle."
+  },
+  "Panel Position": {
+    "message": "Paneelin sijainti"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Sivun sivu, jolla esikatselu voidaan näyttää."
+  },
+  "Right side": {
+    "message": "Oikea puoli"
+  },
+  "Left side": {
+    "message": "Vasen puoli"
+  },
+  "Close on Escape Key": {
+    "message": "Sulje Escape -avain"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Sulje esikatselupaneeli ESC (Escape) -näppäimellä."
+  },
+  "Automatically Hide Previews": {
+    "message": "Piilota esikatselut automaattisesti"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Piilotaan esikatselupaneelin, kun vierität pois tai olet vuorovaikutuksessa pääsivulla."
+  },
+  "Preview in Side Panel": {
+    "message": "Esikatselu sivupaneelissa"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Näyttää näkymän Chrome -sivupaneelissa kelluvan laatikon sijasta."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Esikatselu"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Kun automaattinen esikatselu Hoverissa on käytössä, tämä on viive ennen esikatselun näyttämistä."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Advanced] Force -esikatselu"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "Sivustoille, jotka ** todella ** eivät halua esikatselua (esim. Stackoverflow.com), tämä pakottaa esikatselun. Nerd-hälytys: Tämä on kehyksen räjähdysmäinen buster."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Advanced] Poista incognito Google käytöstä"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "Oletusarvoisesti käytetyn Google-haun versio on aina allekirjoitettu yksityisyyden ja tietoturvan syistä. Vaikka tämä voi johtaa aina kirjautumiskehotteiden näkemiseen."
+  },
+  "Disable Previews on this site": {
+    "message": "Poista esikatselut käytöstä tällä sivustolla"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Yksityiskohtaiset tiedot valintaruudusta täältä."
+  },
+  "Disabled on Websites": {
     "message": "Vammaiset verkkosivustoilla"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Laajennus ei toimi näillä sivustoilla. Kirjoita yksi sivusto riviä kohti."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Laajennus ei toimi näillä sivustoilla, voit poistaa sivuston käytöstä lisäämällä tähän luetteloon."
+  },
+  "Successfully updated settings": {
+    "message": "Päivitetyt asetukset onnistuneesti"
   }
 }
