--- a/src/_locales/hr/messages.json
+++ b/src/_locales/hr/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Pregled pretraživanja i povezivanja",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Pregledi veza",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "Pogledajte preglede veza i odmah izvršava pretraživanja na istoj stranici pomoću ovog pregledača umjesto otvaranja novih kartica",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Kako stojimo?"
+  "@testMarkup": {
+    "message": "<div> <p> Zdravo svijet </p> Ovo je <strong> jezik </strong> web </div>"
   },
-  "fdbkCareToShare": {
-    "message": "Drago mi je da ti se sviđa! Možete li nam pomoći da dijelimo ❤️?"
+  "Search engine": {
+    "message": "Pretraživač"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Kako se možemo poboljšati?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Tražilica koja bi se koristila za inline preglede pretraživanja."
   },
-  "fdbkThanks": {
-    "message": "Hvala na povratnoj informaciji!"
+  "Google Search": {
+    "message": "Google pretraživanje"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Ocijenite na web prostoru"
+  "Bing Search": {
+    "message": "Pretraživanje binga"
   },
-  "fdbkNoResponse": {
-    "message": "Ne"
+  "Yahoo Search": {
+    "message": "Yahoo pretraživanje"
   },
-  "fdbkSumbit": {
-    "message": "podnijeti"
+  "Baidu Search": {
+    "message": "Baidu pretraživanje"
   },
-  "reportAnIssue": {
-    "message": "Prijaviti problem",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Yandex pretraživanje"
   },
-  "showDemo": {
-    "message": "Prikaži demo",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Širina pregleda (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Uspješno ažurirane postavke"
+  "The width of the preview panel relative to the page.": {
+    "message": "Širina ploče za pregled u odnosu na stranicu."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Visina pregleda (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Visina ploče za pregled u odnosu na stranicu."
+  },
+  "Panel Position": {
+    "message": "Položaj ploče"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Strana stranice na kojoj će prikazati pregled."
+  },
+  "Right side": {
+    "message": "Desna strana"
+  },
+  "Left side": {
+    "message": "Lijeva strana"
+  },
+  "Close on Escape Key": {
+    "message": "Zatvorite ključ za bijeg"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Upotrijebite tipku ESC (Escape) za zatvaranje ploče za pregled."
+  },
+  "Automatically Hide Previews": {
+    "message": "Automatski sakriti preglede"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Skriva ploču za pregled kada se pomaknete ili komunicirate s glavnom stranom."
+  },
+  "Preview in Side Panel": {
+    "message": "Pregled na bočnoj ploči"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Prikazuje prikaz na bočnoj ploči Chrome umjesto u plutajućem okviru."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Kašnjenje u pregledu"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Kada je omogućen automatski pregled lebdeća, ovo je kašnjenje prije nego što se prikaže pregled."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Napredni] pregled sile"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "Za web stranice koje ** stvarno ** ne žele biti pregledani (npr. StackoverFlow.com) to prisiljava pregled. Upozorenje Nerd-a: Ovo je Buster koji pušta okvir."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Napredno] Onemogućite Incognito Google"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "Prema zadanim postavkama, verzija Google pretraživanja uvijek je potpisana iz razloga privatnosti i sigurnosti. Iako to može rezultirati uvijek viđenjem upita za prijavu."
+  },
+  "Disable Previews on this site": {
+    "message": "Onemogućite preglede na ovoj web stranici"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Informacije o detaljima o potvrdnom okviru ovdje."
+  },
+  "Disabled on Websites": {
     "message": "Onemogućeno na web stranicama"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Proširenje se neće pokrenuti na tim web lokacijama. Unesite jedno mjesto po liniji."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Proširenje se neće pokrenuti na ovim web lokacijama, možete onemogućiti web mjesto dodavanjem na ovaj popis."
+  },
+  "Successfully updated settings": {
+    "message": "Uspješno ažurirane postavke"
   }
 }
