--- a/src/_locales/kn/messages.json
+++ b/src/_locales/kn/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "ಹುಡುಕಾಟ ಮತ್ತು ಲಿಂಕ್ ಪೂರ್ವವೀಕ್ಷಣೆ",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "ಲಿಂಕ್ ಪೂರ್ವವೀಕ್ಷಣೆಗಳು",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "ಲಿಂಕ್‌ಗಳ ಪೂರ್ವವೀಕ್ಷಣೆಗಳನ್ನು ನೋಡಿ ಮತ್ತು ಹೊಸ ಟ್ಯಾಬ್‌ಗಳನ್ನು ತೆರೆಯುವ ಬದಲು ಈ ಪೂರ್ವವೀಕ್ಷಣೆ ಬಳಸಿ ಅದೇ ಪುಟದಲ್ಲಿ ಹುಡುಕಾಟಗಳನ್ನು ತಕ್ಷಣ ನಿರ್ವಹಿಸುತ್ತದೆ",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "ನಾವು ಹೇಗೆ ಮಾಡುತ್ತಿದ್ದೇವೆ?"
+  "@testMarkup": {
+    "message": "<ಡಿವ್> <p> ಹಲೋ ವರ್ಲ್ಡ್ </p> ಇದು ವೆಬ್‌ನ <strong> ಭಾಷೆ </strong> </div>"
   },
-  "fdbkCareToShare": {
-    "message": "ನೀವು ಇಷ್ಟಪಟ್ಟಿದ್ದಕ್ಕಾಗಿ ಸಂತೋಷ! The ಅನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ನಿಮಗೆ ಸಹಾಯ ಮಾಡಬಹುದೇ?"
+  "Search engine": {
+    "message": "ಶೋಧಕ ಎಂಜಿನ್"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "ನಾವು ಹೇಗೆ ಸುಧಾರಿಸಬಹುದು?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "ಇನ್ಲೈನ್ ಹುಡುಕಾಟ ಪೂರ್ವವೀಕ್ಷಣೆಗಳಿಗೆ ಬಳಸಲಾಗುವ ಸರ್ಚ್ ಎಂಜಿನ್."
   },
-  "fdbkThanks": {
-    "message": "ಪ್ರತಿಕ್ರಿಯೆಗಾಗಿ ಧನ್ಯವಾದಗಳು!"
+  "Google Search": {
+    "message": "Google ಹುಡುಕಾಟ"
   },
-  "fdbkRateOnWebstore": {
-    "message": "ವೆಬ್‌ಸ್ಟೋರ್‌ನಲ್ಲಿ ದರ"
+  "Bing Search": {
+    "message": "ಬಿಂಗ್ ಹುಡುಕಾಟ"
   },
-  "fdbkNoResponse": {
-    "message": "ಇಲ್ಲ"
+  "Yahoo Search": {
+    "message": "ಯಾಹೂ ಹುಡುಕಾಟ"
   },
-  "fdbkSumbit": {
-    "message": "ಸಲ್ಲಿಸು"
+  "Baidu Search": {
+    "message": "ಬೈದು ಹುಡುಕಾಟ"
   },
-  "reportAnIssue": {
-    "message": "ಸಮಸ್ಯೆಯನ್ನು ವರದಿ ಮಾಡಿ",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "ಯಾಂಡೆಕ್ಸ್ ಹುಡುಕಾಟ"
   },
-  "showDemo": {
-    "message": "ಡೆಮೊ ತೋರಿಸಿ",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "ಪೂರ್ವವೀಕ್ಷಣೆ ಅಗಲ (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಿದ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"
+  "The width of the preview panel relative to the page.": {
+    "message": "ಪುಟಕ್ಕೆ ಹೋಲಿಸಿದರೆ ಪೂರ್ವವೀಕ್ಷಣೆ ಫಲಕದ ಅಗಲ."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "ಪೂರ್ವವೀಕ್ಷಣೆ ಎತ್ತರ (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "ಪುಟಕ್ಕೆ ಹೋಲಿಸಿದರೆ ಪೂರ್ವವೀಕ್ಷಣೆ ಫಲಕದ ಎತ್ತರ."
+  },
+  "Panel Position": {
+    "message": "ಫಲಕ ಸ್ಥಾನ"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "ಪೂರ್ವವೀಕ್ಷಣೆಯನ್ನು ಪ್ರದರ್ಶಿಸುವ ಪುಟದ ಬದಿ."
+  },
+  "Right side": {
+    "message": "ಬಲಭಾಗದ"
+  },
+  "Left side": {
+    "message": "ಎಡಬದಿ"
+  },
+  "Close on Escape Key": {
+    "message": "ಎಸ್ಕೇಪ್ ಕೀ ಅನ್ನು ಮುಚ್ಚಿ"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "ಪೂರ್ವವೀಕ್ಷಣೆ ಫಲಕವನ್ನು ಮುಚ್ಚಲು ESC (EXCAPE) ಕೀಲಿಯನ್ನು ಬಳಸಿ."
+  },
+  "Automatically Hide Previews": {
+    "message": "ಪೂರ್ವವೀಕ್ಷಣೆಯನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಮರೆಮಾಡಿ"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "ನೀವು ಸ್ಕ್ರಾಲ್ ಮಾಡುವಾಗ ಅಥವಾ ಮುಖ್ಯ ಪುಟದೊಂದಿಗೆ ಸಂವಹನ ನಡೆಸುವಾಗ ಪೂರ್ವವೀಕ್ಷಣೆ ಫಲಕವನ್ನು ಮರೆಮಾಡುತ್ತದೆ."
+  },
+  "Preview in Side Panel": {
+    "message": "ಸೈಡ್ ಪ್ಯಾನೆಲ್‌ನಲ್ಲಿ ಪೂರ್ವವೀಕ್ಷಣೆ"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "ತೇಲುವ ಪೆಟ್ಟಿಗೆಯ ಬದಲು ಕ್ರೋಮ್ ಸೈಡ್ ಪ್ಯಾನೆಲ್‌ನಲ್ಲಿ ವೀಕ್ಷಣೆಯನ್ನು ಪ್ರದರ್ಶಿಸುತ್ತದೆ."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "ಪೂರ್ವವೀಕ್ಷಣೆ-ಹೂವರ್ ವಿಳಂಬ"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "ಹೂವರ್‌ನಲ್ಲಿ ಸ್ವಯಂಚಾಲಿತ ಪೂರ್ವವೀಕ್ಷಣೆಯನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿದಾಗ, ಪೂರ್ವವೀಕ್ಷಣೆಯನ್ನು ತೋರಿಸುವ ಮೊದಲು ಇದು ವಿಳಂಬವಾಗಿದೆ."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[ಸುಧಾರಿತ] ಫೋರ್ಸ್ ಪೂರ್ವವೀಕ್ಷಣೆ"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "** ನಿಜವಾಗಿಯೂ ** ಪೂರ್ವವೀಕ್ಷಣೆ ಮಾಡಲು ಬಯಸುವುದಿಲ್ಲ (ಉದಾ. ಸ್ಟಾಕ್‌ಓವರ್ ಫ್ಲೋ.ಕಾಮ್) ಇದು ಪೂರ್ವವೀಕ್ಷಣೆಯನ್ನು ಒತ್ತಾಯಿಸುತ್ತದೆ. ನೆರ್ಡ್ ಅಲರ್ಟ್: ಇದು ಫ್ರೇಮ್-ಬಸ್ಟ್ ಬಸ್ಟರ್ ಆಗಿದೆ."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[ಸುಧಾರಿತ] ಅಜ್ಞಾತ ಗೂಗಲ್ ಅನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "ಪೂರ್ವನಿಯೋಜಿತವಾಗಿ, ಬಳಸಿದ ಗೂಗಲ್ ಹುಡುಕಾಟದ ಆವೃತ್ತಿಯನ್ನು ಯಾವಾಗಲೂ ಗೌಪ್ಯತೆ ಮತ್ತು ಭದ್ರತಾ ಕಾರಣಗಳಿಗಾಗಿ ಸಹಿ ಮಾಡಲಾಗುತ್ತದೆ. ಇದು ಯಾವಾಗಲೂ ಸೈನ್-ಇನ್ ಪ್ರಾಂಪ್ಟ್‌ಗಳನ್ನು ನೋಡುವುದಕ್ಕೆ ಕಾರಣವಾಗಬಹುದು."
+  },
+  "Disable Previews on this site": {
+    "message": "ಈ ಸೈಟ್‌ನಲ್ಲಿ ಪೂರ್ವವೀಕ್ಷಣೆಯನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಿ"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "ಚೆಕ್‌ಬಾಕ್ಸ್ ಬಗ್ಗೆ ವಿವರ ಮಾಹಿತಿ ಇಲ್ಲಿ."
+  },
+  "Disabled on Websites": {
     "message": "ವೆಬ್‌ಸೈಟ್‌ಗಳಲ್ಲಿ ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಲಾಗಿದೆ"
   },
-  "optionBlockedSitesDesc": {
-    "message": "ಈ ಸೈಟ್‌ಗಳಲ್ಲಿ ವಿಸ್ತರಣೆ ಚಲಿಸುವುದಿಲ್ಲ. ಪ್ರತಿ ಸಾಲಿಗೆ ಒಂದು ಸೈಟ್ ನಮೂದಿಸಿ."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "ವಿಸ್ತರಣೆಯು ಈ ಸೈಟ್‌ಗಳಲ್ಲಿ ಚಲಿಸುವುದಿಲ್ಲ, ಈ ಪಟ್ಟಿಗೆ ಸೇರಿಸುವ ಮೂಲಕ ನೀವು ಸೈಟ್ ಅನ್ನು ನಿಷ್ಕ್ರಿಯಗೊಳಿಸಬಹುದು."
+  },
+  "Successfully updated settings": {
+    "message": "ಯಶಸ್ವಿಯಾಗಿ ನವೀಕರಿಸಿದ ಸೆಟ್ಟಿಂಗ್‌ಗಳು"
   }
 }
