--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Previzualizare căutare și link",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Previzualizări ale linkului",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "Consultați previzualizările linkurilor și efectuați instantaneu căutări pe aceeași pagină folosind acest previzualizare în loc să deschideți noi file",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Ce mai facem?"
+  "@testMarkup": {
+    "message": "<div> <p> hello world </p> Acesta este <strong> limbajul </strong> al web </div>"
   },
-  "fdbkCareToShare": {
-    "message": "Bucur că vă place! Ne puteți ajuta să împărtășim ❤️?"
+  "Search engine": {
+    "message": "Motor de căutare"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Cum ne putem îmbunătăți?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Motorul de căutare care ar fi utilizat pentru previzualizări de căutare în linie."
   },
-  "fdbkThanks": {
-    "message": "Multumesc pentru feedback!"
+  "Google Search": {
+    "message": "Cautare Google"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Evaluarea pe magazinul web"
+  "Bing Search": {
+    "message": "Căutare bing"
   },
-  "fdbkNoResponse": {
-    "message": "Nu"
+  "Yahoo Search": {
+    "message": "Căutare yahoo"
   },
-  "fdbkSumbit": {
-    "message": "Trimite"
+  "Baidu Search": {
+    "message": "Căutare Baidu"
   },
-  "reportAnIssue": {
-    "message": "Raportează o problemă",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Căutare yandex"
   },
-  "showDemo": {
-    "message": "Arată demo",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Previzualizare lățime (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Setări actualizate cu succes"
+  "The width of the preview panel relative to the page.": {
+    "message": "Lățimea panoului de previzualizare în raport cu pagina."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Previzualizare înălțime (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Înălțimea panoului de previzualizare în raport cu pagina."
+  },
+  "Panel Position": {
+    "message": "Poziția panoului"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Partea laterală a paginii în care se afișează previzualizarea."
+  },
+  "Right side": {
+    "message": "Partea dreapta"
+  },
+  "Left side": {
+    "message": "Partea stanga"
+  },
+  "Close on Escape Key": {
+    "message": "Închideți cheia de evacuare"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Utilizați tasta ESC (Escape) pentru a închide panoul de previzualizare."
+  },
+  "Automatically Hide Previews": {
+    "message": "Ascunde automat previzualizările"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Ascunde panoul de previzualizare când derulați sau interacționați cu pagina principală."
+  },
+  "Preview in Side Panel": {
+    "message": "Previzualizare în panoul lateral"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Afișează vizualizarea în panoul lateral crom în loc de o cutie plutitoare."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Previzualizare întârziere"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Când este activată previzualizarea automată pe hover, aceasta este întârzierea înainte de afișarea previzualizării."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Avansat] previzualizare forță"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "Pentru site -urile web care ** într -adevăr ** nu doresc să fie previzualizate (de exemplu, stackoverflow.com), acest lucru forțează o previzualizare. Nerd Alert: Acesta este un buster care se bazează pe cadru."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Avansat] Dezactivați incognito Google"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "În mod implicit, versiunea de căutare Google folosită este întotdeauna semnată din motive de confidențialitate și securitate. Deși acest lucru poate duce la înregistrarea întotdeauna de prompturi de conectare."
+  },
+  "Disable Previews on this site": {
+    "message": "Dezactivați previzualizările pe acest site"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Informațiile detaliate despre caseta de selectare aici."
+  },
+  "Disabled on Websites": {
     "message": "Dezactivat pe site -uri web"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Extensia nu va rula pe aceste site -uri. Introduceți un site pe linie."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Extensia nu va rula pe aceste site -uri, puteți dezactiva un site adăugând la această listă."
+  },
+  "Successfully updated settings": {
+    "message": "Setări actualizate cu succes"
   }
 }
