--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Поиск и предварительный просмотр ссылок",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Предварительный просмотр ссылок",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "См. Предварительные просмотра ссылок и мгновенно выполняет поиск на той же странице, используя этот предварительный просмотр вместо открытия новых вкладок",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Как у нас дела?"
+  "@testMarkup": {
+    "message": "<div> <p> Привет, мир </p> Это язык <strong> </strong> Интернета </div>"
   },
-  "fdbkCareToShare": {
-    "message": "Рад, что вам это нравится! Вы можете помочь нам поделиться ❤?"
+  "Search engine": {
+    "message": "Поисковый движок"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Как мы можем улучшить?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Поисковая система, которая будет использоваться для просмотра встроенного поиска."
   },
-  "fdbkThanks": {
-    "message": "Спасибо за ответ!"
+  "Google Search": {
+    "message": "Поиск Гугл"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Оценка в веб -магазине"
+  "Bing Search": {
+    "message": "Bing Search"
   },
-  "fdbkNoResponse": {
-    "message": "Нет"
+  "Yahoo Search": {
+    "message": "Yahoo Search"
   },
-  "fdbkSumbit": {
-    "message": "Представлять на рассмотрение"
+  "Baidu Search": {
+    "message": "Baidu Search"
   },
-  "reportAnIssue": {
-    "message": "Сообщить о проблеме",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Яндекс Поиск"
   },
-  "showDemo": {
-    "message": "Показать демонстрацию",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Ширина предварительного просмотра (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Успешно обновленные настройки"
+  "The width of the preview panel relative to the page.": {
+    "message": "Ширина панели предварительного просмотра относительно страницы."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Высота предварительного просмотра (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Высота панели предварительного просмотра относительно страницы."
+  },
+  "Panel Position": {
+    "message": "Положение панели"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Сторона страницы, на которой можно отобразить предварительный просмотр."
+  },
+  "Right side": {
+    "message": "Правая сторона"
+  },
+  "Left side": {
+    "message": "Левая сторона"
+  },
+  "Close on Escape Key": {
+    "message": "Закрыть ключ побега"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Используйте ключ ESC (Escape), чтобы закрыть панель предварительного просмотра."
+  },
+  "Automatically Hide Previews": {
+    "message": "Автоматически скрыть предварительные просмотра"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Укрывает панель предварительного просмотра, когда вы прокручиваете или взаимодействуете с главной страницей."
+  },
+  "Preview in Side Panel": {
+    "message": "Предварительный просмотр на боковой панели"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Отображает вид на боковой панели Chrome вместо плавающей коробки."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Предварительный просмотр задержки"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Когда автоматический предварительный просмотр на Hover включен, это задержка до того, как будет показан предварительный просмотр."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Advanced] Предварительный просмотр силы"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "Для веб -сайтов, которые ** действительно ** не хотят быть предварительно просмотрены (например, Stackoverflow.com) Это заставляет предварительный просмотр. NERD ALERT: это бастер-бюст."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Advanced] Отключить инкогнито Google"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "По умолчанию используемая версия поиска Google всегда выходит из строя по соображениям конфиденциальности и безопасности. Хотя это может привести к тому, что всегда будет увидеть подсказки входа."
+  },
+  "Disable Previews on this site": {
+    "message": "Отключить превью на этом сайте"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Подробная информация о флажке здесь."
+  },
+  "Disabled on Websites": {
     "message": "Отключено на веб -сайтах"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Расширение не будет работать на этих сайтах. Введите один сайт на строку."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Расширение не будет работать на этих сайтах, вы можете отключить сайт, добавив в этот список."
+  },
+  "Successfully updated settings": {
+    "message": "Успешно обновленные настройки"
   }
 }
