--- a/src/_locales/sl/messages.json
+++ b/src/_locales/sl/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Predogled iskanja in povezav",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Predogled povezav",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "Oglejte si predoglede povezav in takoj izvede iskanje na isti strani s tem predogledom, namesto da bi odpirali nove zavihke",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Kako smo?"
+  "@testMarkup": {
+    "message": "<EV> <p> Hello World </p> To je <strong> jezik </strong> spleta </div>"
   },
-  "fdbkCareToShare": {
-    "message": "Vesela sem, da ti je všeč! Ali nam lahko pomagate deliti ❤️?"
+  "Search engine": {
+    "message": "Iskalnik"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Kako se lahko izboljšamo?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Iskalnik, ki bi bil uporabljen za predoglede inline iskanja."
   },
-  "fdbkThanks": {
-    "message": "Hvala za povratne informacije!"
+  "Google Search": {
+    "message": "Google iskanje"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Ocenite na spletni trgovini"
+  "Bing Search": {
+    "message": "Bing iskanje"
   },
-  "fdbkNoResponse": {
-    "message": "Ne"
+  "Yahoo Search": {
+    "message": "Yahoo iskanje"
   },
-  "fdbkSumbit": {
-    "message": "Oddaj"
+  "Baidu Search": {
+    "message": "Baidu iskanje"
   },
-  "reportAnIssue": {
-    "message": "Poroča o težavi",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Yandex iskanje"
   },
-  "showDemo": {
-    "message": "Pokaži demo",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Širina predogleda (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Uspešno posodobljene nastavitve"
+  "The width of the preview panel relative to the page.": {
+    "message": "Širina predogledne plošče glede na stran."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Višina predogleda (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Višina predogledne plošče glede na stran."
+  },
+  "Panel Position": {
+    "message": "Položaj plošče"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Stran strani, na kateri lahko prikažete predogled."
+  },
+  "Right side": {
+    "message": "Desna stran"
+  },
+  "Left side": {
+    "message": "Leva stran"
+  },
+  "Close on Escape Key": {
+    "message": "Zaprite tipko Escape"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Uporabite tipko ESC (Escape) za zapiranje plošče za predogled."
+  },
+  "Automatically Hide Previews": {
+    "message": "Samodejno skrijete predoglede"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Ko se pomaknete z glavno stranjo, skrije ploščo za predogled."
+  },
+  "Preview in Side Panel": {
+    "message": "Predogled na stranski plošči"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Prikaže pogled na kromirani stranski plošči namesto s plavajočo škatlo."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Zakasnitev predogleda v hover"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Ko je omogočeno samodejni predogled na hover, je to zamuda pred prikazano predogled."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Napredno] Predogled sile"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "Za spletna mesta, ki ** resnično ** ne želijo biti predogled (npr. StackOverflow.com), to sili predogled. Nerd Alert: To je buster, ki razbije okvir."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Advanced] Onemogoči incognito Google"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "Različica uporabljenega Google Search je privzeto vedno prijavljena iz zasebnosti in varnostnih razlogov. Čeprav lahko to vedno opazi pozive."
+  },
+  "Disable Previews on this site": {
+    "message": "Onemogoči predogled na tej spletni strani"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Podrobne informacije o potrditvenem polju tukaj."
+  },
+  "Disabled on Websites": {
     "message": "Onemogočeno na spletnih mestih"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Na teh spletnih mestih se ne bo izvajalo razširitev. Vnesite eno spletno mesto na vrstico."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Razširitev se ne bo izvajala na teh spletnih mestih, spletno mesto lahko onemogočite tako, da dodate na ta seznam."
+  },
+  "Successfully updated settings": {
+    "message": "Uspešno posodobljene nastavitve"
   }
 }
