--- a/src/_locales/te/messages.json
+++ b/src/_locales/te/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "శోధించండి & లింక్ ప్రివ్యూ",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "లింక్ ప్రివ్యూలు",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "లింక్‌ల ప్రివ్యూలను చూడండి మరియు క్రొత్త ట్యాబ్‌లను తెరవడానికి బదులుగా ఈ ప్రివ్యూయర్‌ను ఉపయోగించి అదే పేజీలో తక్షణమే శోధనలను ప్రదర్శిస్తుంది",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "మేము ఎలా చేస్తున్నాము?"
+  "@testMarkup": {
+    "message": "<div> <p> హలో వరల్డ్ </p> ఇది వెబ్ </div> యొక్క <strong> భాష </strong>"
   },
-  "fdbkCareToShare": {
-    "message": "నీకు నచ్చినందుకు సంతోషం! మీరు ❤ భాగస్వామ్యం చేయడానికి మాకు సహాయం చేయగలరా?"
+  "Search engine": {
+    "message": "శోధన యంత్రము"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "మేము ఎలా మెరుగుపరచగలం?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "ఇన్లైన్ శోధన ప్రివ్యూల కోసం ఉపయోగించబడే సెర్చ్ ఇంజన్."
   },
-  "fdbkThanks": {
-    "message": "అభిప్రాయము తెలిపినందుకు ధన్యవాదములు!"
+  "Google Search": {
+    "message": "గూగుల్ శోధన"
   },
-  "fdbkRateOnWebstore": {
-    "message": "వెబ్‌స్టోర్‌లో రేటు"
+  "Bing Search": {
+    "message": "బింగ్ శోధన"
   },
-  "fdbkNoResponse": {
-    "message": "లేదు"
+  "Yahoo Search": {
+    "message": "యాహూ శోధన"
   },
-  "fdbkSumbit": {
-    "message": "సమర్పించండి"
+  "Baidu Search": {
+    "message": "బైడు శోధన"
   },
-  "reportAnIssue": {
-    "message": "ఒక సమస్యను నివేదించండి",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "యాండెక్స్ శోధన"
   },
-  "showDemo": {
-    "message": "డెమో షో",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "ప్రివ్యూ వెడల్పు (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "విజయవంతంగా నవీకరించబడిన సెట్టింగులు"
+  "The width of the preview panel relative to the page.": {
+    "message": "పేజీకి సంబంధించి ప్రివ్యూ ప్యానెల్ యొక్క వెడల్పు."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "ప్రివ్యూ ఎత్తు (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "పేజీకి సంబంధించి ప్రివ్యూ ప్యానెల్ యొక్క ఎత్తు."
+  },
+  "Panel Position": {
+    "message": "ప్యానెల్ స్థానం"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "ప్రివ్యూను ప్రదర్శించే పేజీ వైపు."
+  },
+  "Right side": {
+    "message": "కుడి వైపు"
+  },
+  "Left side": {
+    "message": "ఎడమ వైపు"
+  },
+  "Close on Escape Key": {
+    "message": "ఎస్కేప్ కీపై మూసివేయండి"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "ప్రివ్యూ ప్యానెల్‌ను మూసివేయడానికి ESC (ఎస్కేప్) కీని ఉపయోగించండి."
+  },
+  "Automatically Hide Previews": {
+    "message": "స్వయంచాలకంగా ప్రివ్యూలను దాచండి"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "మీరు దూరంగా స్క్రోల్ చేసినప్పుడు లేదా ప్రధాన పేజీతో సంభాషించేటప్పుడు ప్రివ్యూ ప్యానెల్‌ను దాచిపెడుతుంది."
+  },
+  "Preview in Side Panel": {
+    "message": "సైడ్ ప్యానెల్‌లో ప్రివ్యూ"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "ఫ్లోటింగ్ బాక్స్‌కు బదులుగా క్రోమ్ సైడ్ ప్యానెల్‌లో వీక్షణను ప్రదర్శిస్తుంది."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "ప్రివ్యూ-ఆన్-హోవర్ ఆలస్యం"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "హోవర్‌పై ఆటోమేటిక్ ప్రివ్యూ ప్రారంభించబడినప్పుడు, ప్రివ్యూ చూపబడటానికి ముందు ఇది ఆలస్యం."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[అధునాతన] ఫోర్స్ ప్రివ్యూ"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "** నిజంగా ** పరిదృశ్యం చేయకూడదనుకునే వెబ్‌సైట్ల కోసం (ఉదా. స్టాక్‌ఓవర్‌ఫ్లో.కామ్) ఇది ప్రివ్యూను బలవంతం చేస్తుంది. తానే చెప్పుకున్నట్టూ హెచ్చరిక: ఇది ఫ్రేమ్-బస్టింగ్ బస్టర్."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[అధునాతన] అజ్ఞాత Google ని నిలిపివేయండి"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "అప్రమేయంగా, ఉపయోగించిన గూగుల్ సెర్చ్ యొక్క సంస్కరణ గోప్యత మరియు భద్రతా కారణాల కోసం ఎల్లప్పుడూ సైన్-అవుట్ అవుతుంది. ఇది ఎల్లప్పుడూ సైన్-ఇన్ ప్రాంప్ట్‌లను చూడటం వల్ల కావచ్చు."
+  },
+  "Disable Previews on this site": {
+    "message": "ఈ సైట్‌లో ప్రివ్యూలను నిలిపివేయండి"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "చెక్‌బాక్స్ గురించి వివరాల సమాచారం ఇక్కడ."
+  },
+  "Disabled on Websites": {
     "message": "వెబ్‌సైట్లలో నిలిపివేయబడింది"
   },
-  "optionBlockedSitesDesc": {
-    "message": "ఈ సైట్లలో పొడిగింపు అమలు చేయదు. ప్రతి పంక్తికి ఒక సైట్‌ను నమోదు చేయండి."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "పొడిగింపు ఈ సైట్‌లలో అమలు చేయదు, మీరు ఈ జాబితాకు జోడించడం ద్వారా సైట్‌ను నిలిపివేయవచ్చు."
+  },
+  "Successfully updated settings": {
+    "message": "విజయవంతంగా నవీకరించబడిన సెట్టింగులు"
   }
 }
