--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -1,52 +1,113 @@
 {
-  "appName": {
+  "@appName": {
     "message": "Arama ve Bağlantı Önizlemesi",
     "description": "The name of the extension"
   },
-  "appShortName": {
+  "@appShortName": {
     "message": "Bağlantı Önizlemeleri",
     "description": "The short-version name of the extension name"
   },
-  "appDesc": {
+  "@appDesc": {
     "message": "Bağlantıların önizlemelerine bakın ve yeni sekmeleri açmak yerine bu önizleyiciyi kullanarak aynı sayfada aramaları anında gerçekleştirir",
     "description": "A description of its function"
   },
-  "fdbkHowAreWeDoing": {
-    "message": "Nasıl yapıyoruz?"
+  "@testMarkup": {
+    "message": "<Div> <p> Merhaba Dünya </p> Bu <strong> dil </strong> Web'in"
   },
-  "fdbkCareToShare": {
-    "message": "Beğendiğine sevindim! ❤ood paylaşmamıza yardım edebilir misiniz?"
+  "Search engine": {
+    "message": "Arama motoru"
   },
-  "fdbkHowCanWeImprove": {
-    "message": "Nasıl gelişebiliriz?"
+  "The search engine that would be used for inline search previews.": {
+    "message": "Satır içi arama önizlemeleri için kullanılacak arama motoru."
   },
-  "fdbkThanks": {
-    "message": "Geri dönüşünüz için teşekkür ederiz!"
+  "Google Search": {
+    "message": "Google arama"
   },
-  "fdbkRateOnWebstore": {
-    "message": "Web Store'da oran"
+  "Bing Search": {
+    "message": "Bing Arama"
   },
-  "fdbkNoResponse": {
-    "message": "HAYIR"
+  "Yahoo Search": {
+    "message": "Yahoo Arama"
   },
-  "fdbkSumbit": {
-    "message": "Göndermek"
+  "Baidu Search": {
+    "message": "Baidu Arama"
   },
-  "reportAnIssue": {
-    "message": "Bir Sorun Bildirin",
-    "description": "Button text for reporting an issue"
+  "Yandex Search": {
+    "message": "Yandex Arama"
   },
-  "showDemo": {
-    "message": "Demoyu Göster",
-    "description": "Button text for showing demo"
+  "Preview Width (%)": {
+    "message": "Önizleme genişliği (%)"
   },
-  "optionsSaveSuccess": {
-    "message": "Başarılı bir şekilde güncellenen ayarlar"
+  "The width of the preview panel relative to the page.": {
+    "message": "Önizleme panelinin genişliği sayfaya göre."
   },
-  "optionBlockedSites": {
+  "Preview Height (%)": {
+    "message": "Önizleme Yüksekliği (%)"
+  },
+  "The height of the preview panel relative to the page.": {
+    "message": "Önizleme panelinin sayfaya göre yüksekliği."
+  },
+  "Panel Position": {
+    "message": "Panel pozisyonu"
+  },
+  "The side of the page in which to display the preview.": {
+    "message": "Önizlemeyi görüntülemek için sayfanın tarafı."
+  },
+  "Right side": {
+    "message": "Sağ Taraf"
+  },
+  "Left side": {
+    "message": "Sol Taraf"
+  },
+  "Close on Escape Key": {
+    "message": "Escape Anahtarında Kapat"
+  },
+  "Use the ESC (escape) key to close the preview panel.": {
+    "message": "Önizleme panelini kapatmak için ESC (Escape) tuşunu kullanın."
+  },
+  "Automatically Hide Previews": {
+    "message": "Önizlemeleri otomatik olarak gizle"
+  },
+  "Hides the preview panel when you scroll away or interact with the main page.": {
+    "message": "Ana sayfada kaydırdığınızda veya etkileşime girdiğinizde önizleme panelini gizler."
+  },
+  "Preview in Side Panel": {
+    "message": "Yan panelde önizleme"
+  },
+  "Displays the view in Chrome Side Panel instead of a floating box.": {
+    "message": "Görünüşü Kayan bir kutu yerine krom yan panelde görüntüler."
+  },
+  "Preview-on-Hover Delay": {
+    "message": "Hover Gecikme Önizleme"
+  },
+  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+    "message": "Varışta otomatik önizleme etkinleştirildiğinde, önizleme gösterilmeden önceki gecikme budur."
+  },
+  "[Advanced] Force Preview": {
+    "message": "[Gelişmiş] Kuvvet Önizleme"
+  },
+  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+    "message": "** gerçekten ** önizlemek istemeyen web siteleri için (örn. Stackoverflow.com) bu bir önizlemeyi zorlar. Nerd Alert: Bu bir çerçeve çubuğu Buster."
+  },
+  "[Advanced] Disable Incognito Google": {
+    "message": "[Gelişmiş] Gizli Google'ı devre dışı bırakın"
+  },
+  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+    "message": "Varsayılan olarak, kullanılan Google Search sürümü gizlilik ve güvenlik nedenleriyle her zaman imzalanır. Bununla birlikte, bu her zaman oturum açma istemleri görmeye neden olabilir."
+  },
+  "Disable Previews on this site": {
+    "message": "Bu sitedeki önizlemeleri devre dışı bırakın"
+  },
+  "The detail information about the checkbox here.": {
+    "message": "Onay kutusu hakkında ayrıntılı bilgi."
+  },
+  "Disabled on Websites": {
     "message": "Web sitelerinde devre dışı"
   },
-  "optionBlockedSitesDesc": {
-    "message": "Uzatma bu sitelerde çalışmaz. Satır başına bir site girin."
+  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+    "message": "Uzatma bu sitelerde çalışmaz, bu listeye ekleyerek bir siteyi devre dışı bırakabilirsiniz."
+  },
+  "Successfully updated settings": {
+    "message": "Başarılı bir şekilde güncellenen ayarlar"
   }
 }
